feat(web): showing shimmer when invoking request

--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header" fxLayoutAlign="start center">
+<header class="header">
   <button mat-icon-button (click)="menuClick.emit()">
     <mat-icon svgIcon="menu"></mat-icon>
   </button>
