--- a/web/src/app/sidenav/sidenav.component.html
+++ b/web/src/app/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<div class="sidenav-container">
+<div class="sidenav">
   <mat-nav-list class="list">
     <a
       mat-list-item
@@ -51,7 +51,9 @@
       <p mat-line>同接概要</p>
     </a> -->
   </mat-nav-list>
+
   <mat-divider></mat-divider>
+
   <div class="info">
     <a class="link" href="https://angular.io/" target="_blank">
       Angular: v{{ angularVer }}
