--- a/web/src/app/streams-detail/streams-detail.component.html
+++ b/web/src/app/streams-detail/streams-detail.component.html
@@ -1,79 +1,128 @@
-<div class="streams-detail">
-  <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
-    <a class="title" href="https://youtu.be/{{ stream.streamId }}">
-      {{ stream.title }}
-    </a>
-    <a
-      class="info"
-      fxFlex="55"
-      fxFlex.lt-sm="100"
-      href="https://youtu.be/{{ stream.streamId }}"
-    >
-      <img
-        class="cover"
-        src="https://img.youtube.com/vi/{{ stream.streamId }}/maxresdefault.jpg"
-      />
-    </a>
-    <div
-      class="number"
-      fxFlex="45"
-      fxFlex.lt-sm="100"
-      fxLayout="column"
-      fxLayoutAlign="space-around"
-    >
-      <a
-        class="vtuber-row"
-        fxLayoutAlign="start center"
-        [routerLink]="['/vtuber', stream.vtuberId]"
-      >
+<div class="streams-pages">
+  <div class="hero">
+    <div class="cover-wrapper">
+      <a class="cover-link">
+        <img
+          class="cover"
+          src="https://img.youtube.com/vi/{{
+            stream.streamId
+          }}/maxresdefault.jpg"
+        />
+      </a>
+    </div>
+
+    <div class="meta">
+      <div>
+        <ng-container *ngIf="loading; then shimmerTitle; else streamTitle">
+        </ng-container>
+      </div>
+
+      <a class="liver" [routerLink]="['/vtuber', stream.vtuberId]">
         <img
           class="profile"
           src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
         />
         <span class="name">{{ stream.vtuberId | name }}</span>
       </a>
-      <div fxLayout="row" fxLayoutAlign="space-around">
-        <div flex="50">
-          <div class="value">
-            {{ stream.startTime | format: "HH:mm:ss" }}
-          </div>
+
+      <div class="statistic-container">
+        <div class="statistic">
+          <ng-container *ngIf="!loading; else shimmerStatistic">
+            <div class="value">
+              {{ stream.startTime | format: "HH:mm:ss" }}
+            </div>
+          </ng-container>
+
           <div class="caption" i18n="@@streamStartTime">Start Time</div>
         </div>
-        <div flex="50">
-          <div class="value">
-            <ng-container *ngIf="stream.endTime; else clock">
-              {{ stream.startTime | duration: stream.endTime }}
-            </ng-container>
-            <ng-template #clock>
-              {{ stream.startTime | duration: (everySecond$ | async) }}
-            </ng-template>
-          </div>
+
+        <div class="statistic">
+          <ng-container *ngIf="!loading; else shimmerStatistic">
+            <div class="value">
+              <ng-container *ngIf="stream.endTime; else clock">
+                {{ stream.startTime | duration: stream.endTime }}
+              </ng-container>
+              <ng-template #clock>
+                {{ stream.startTime | duration: (everySecond$ | async) }}
+              </ng-template>
+            </div>
+          </ng-container>
+
           <div class="caption" i18n="@@streamDuration">Duration</div>
         </div>
-      </div>
-      <div fxLayout="row" fxLayoutAlign="space-around">
-        <div flex="50">
-          <div class="value">
-            {{ (stream.averageViewerCount | number) || " ----- " }}
-          </div>
+
+        <div class="statistic">
+          <ng-container *ngIf="!loading; else shimmerStatistic">
+            <div class="value">
+              {{ (stream.averageViewerCount | number) || " ----- " }}
+            </div>
+          </ng-container>
+
           <div class="caption" i18n="@@averageViewers">Average Viewers</div>
         </div>
-        <div flex="50">
-          <div class="value">
-            {{ (stream.maxViewerCount | number) || " ----- " }}
-          </div>
+
+        <div class="statistic">
+          <ng-container *ngIf="!loading; else shimmerStatistic">
+            <div class="value">
+              {{ (stream.maxViewerCount | number) || " ----- " }}
+            </div>
+          </ng-container>
+
           <div class="caption" i18n="@@maximumViewers">Maximum Viewers</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="chart">
-    <hs-area-chart
-      [youtube]="true"
-      [results]="stats"
-      [dateFormatting]="dateFormatting"
-      [autoScale]="false"
-      [timeline]="true"
-    ></hs-area-chart>
+
+  <div class="chart-container">
+    <h4 class="chart-title">Stream Viewers</h4>
+
+    <ng-container *ngIf="loading; then shimmerChart; else streamChart">
+    </ng-container>
   </div>
 </div>
+
+<!-- title -->
+<ng-template #streamTitle>
+  <a class="title" href="https://youtu.be/{{ stream.streamId }}">
+    {{ stream.title }}
+  </a>
+</ng-template>
+
+<ng-template #shimmerTitle>
+  <div class="title shimmer"></div>
+</ng-template>
+
+<!-- liver -->
+<ng-template #streamLiver>
+  <a class="liver" [routerLink]="['/vtuber', stream.vtuberId]">
+    <img class="profile" src="/assets/thumbnail/{{ stream.vtuberId }}.jpg" />
+    <span class="name">{{ stream.vtuberId | name }}</span>
+  </a>
+</ng-template>
+
+<ng-template #shimmerLiver>
+  <div class="liver">
+    <span class="profile shimmer"></span>
+    <span class="name shimmer text"> </span>
+  </div>
+</ng-template>
+
+<!-- statistic -->
+<ng-template #shimmerStatistic>
+  <div class="value shimmer text"></div>
+</ng-template>
+
+<!-- chart -->
+<ng-template #streamChart>
+  <hs-area-chart
+    [results]="stats"
+    [timeline]="true"
+    schemeKey="youtube"
+    timeUnit="second"
+  ></hs-area-chart>
+</ng-template>
+
+<ng-template #shimmerChart>
+  <div class="ngx-chart shimmer"></div>
+</ng-template>
