refactor(web): switch back to date-fns

--- a/web/src/app/bilibili-channel/bilibili-channel.component.html
+++ b/web/src/app/bilibili-channel/bilibili-channel.component.html
@@ -2,7 +2,7 @@
   <div class="submenu">
     <div class="spacer"></div>
     <div class="updated-at" i18n="@@updatedAt">
-      Updated at {{ updatedAt | format: "MM/DD HH:mm" }}
+      Updated at {{ updatedAt | date: "MM/dd hh:mm" }}
     </div>
   </div>
 
