--- a/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
+++ b/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
@@ -2,13 +2,13 @@
   <div class="submenu">
     <div class="spacer"></div>
     <div class="updated-at" i18n="@@updatedAt">
-      Updated at {{ updatedAt | format: "MM/DD HH:mm" }}
+      Updated at {{ updatedAt | date: "MM/dd hh:mm" }}
     </div>
   </div>
 
   <div class="stream-list-container">
     <ng-container *ngFor="let group of streamGroup">
-      <div class="date-label">{{ group.day | format: "MM/DD" }}</div>
+      <div class="date-label">{{ group.day | date: "MM/dd" }}</div>
 
       <div class="stream-list">
         <div
@@ -26,7 +26,7 @@
             </div>
 
             <div class="duration">
-              {{ stream.scheduleTime | format: "HH:mm" }}
+              {{ stream.scheduleTime | date: "hh:mm" }}
             </div>
 
             <a
