feat(web): not found component

--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -1,7 +1,7 @@
 <div class="vtuber-pages">
   <div class="info">
-    <img class="profile" src="/assets/profiles/{{ vtuberId }}.jpg" />
-    <div class="name">{{ vtuberId | name }}</div>
+    <img class="profile" src="/assets/profiles/{{ vtuber.id }}.jpg" />
+    <div class="name">{{ vtuber.id | name }}</div>
   </div>
   <!-- <div
       class="number"
