--- a/web/src/styles/modules/_modules-dir.scss
+++ b/web/src/styles/modules/_modules-dir.scss
@@ -2,6 +2,7 @@
 @import "chart";
 @import "loading";
 @import "settings";
+@import "not-found";
 @import "stream-list";
 @import "stream-pages";
 @import "submenu";
