--- a/web/src/styles/theme/_theme-dir.scss
+++ b/web/src/styles/theme/_theme-dir.scss
@@ -2,6 +2,7 @@
 @import "chart";
 @import "global";
 @import "header";
+@import "not-found";
 @import "material";
 @import "settings";
 @import "sidenav";
