feat(web): set title on each page

--- a/web/src/app/settings/settings.component.html
+++ b/web/src/app/settings/settings.component.html
@@ -7,7 +7,7 @@
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
       <button mat-icon-button disabled></button>
       <mat-checkbox
-        [checked]="vtuberSelected(node.id)"
+        [checked]="isSelected(node.id)"
         (change)="toggleVTuber(node.id)"
       >
         {{ node.id | name }}
