--- a/web/src/app/streams-detail/streams-detail.component.html
+++ b/web/src/app/streams-detail/streams-detail.component.html
@@ -29,7 +29,7 @@
         <div class="statistic">
           <ng-container *ngIf="!loading; else shimmerStatistic">
             <div class="value">
-              {{ stream.startTime | date: "hh:mm:ss" }}
+              {{ stream.startTime | date: "HH:mm:ss" }}
             </div>
           </ng-container>
 
