--- a/web/src/app/youtube-stream/youtube-stream.component.html
+++ b/web/src/app/youtube-stream/youtube-stream.component.html
@@ -1,8 +1,8 @@
 <div class="submenu" *ngIf="!loading; else shimmerSubmenu">
   <div class="spacer"></div>
-  <div class="updated-at" i18n="@@updatedAt">
-    Updated at {{ updatedAt | date: "MM/dd hh:mm" }}
-  </div>
+  <time class="updated-at" i18n="@@updatedAt" [attr.datetime]="updatedAt">
+    Updated at {{ updatedAt | date: "MM/dd HH:mm" }}
+  </time>
 </div>
 
 <div class="stream-list-container" *ngIf="!loading; else shimmerList">
