refactor(web): StreamItemComponent

--- a/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.component.html
+++ b/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.component.html
@@ -8,57 +8,16 @@
 
   <div class="stream-list-container">
     <ng-container *ngFor="let group of streamGroup">
-      <div class="date-label">{{ group.day | date: "MM/dd" }}</div>
+      <div class="date-label">
+        {{ group.day | date: "MM/dd" }}
+      </div>
 
       <div class="stream-list">
         <div
           class="stream"
           *ngFor="let stream of group.streams; trackBy: trackBy"
         >
-          <div class="thumbnail">
-            <div class="cover-wrapper">
-              <img
-                class="cover"
-                src="https://img.youtube.com/vi/{{
-                  stream.streamId
-                }}/maxresdefault.jpg"
-              />
-            </div>
-
-            <div class="duration">
-              {{ stream.scheduleTime | date: "hh:mm" }}
-            </div>
-
-            <a
-              class="icon"
-              href="https://youtu.be/{{ stream.streamId }}"
-              target="_blank"
-            >
-              <mat-icon svgIcon="open_in_new"></mat-icon>
-            </a>
-          </div>
-
-          <div
-            class="title"
-            title="{{ stream.title }}"
-            ellipsis
-            [ellipsis-content]="stream.title"
-          ></div>
-
-          <div class="meta">
-            <img
-              class="profile"
-              src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
-            />
-            <span class="name">{{ stream.vtuberId | name }}</span>
-            <span class="dot">•</span>
-            <span
-              class="time"
-              title="{{ stream.scheduleTime | date: 'yyyy/MM/dd HH:mm:ss' }}"
-            >
-              {{ stream.scheduleTime | distance: (everyMinute$ | async) }}
-            </span>
-          </div>
+          <hs-stream-item [stream]="stream"></hs-stream-item>
         </div>
       </div>
     </ng-container>
@@ -67,5 +26,6 @@
 
 <ng-template #shimmerList>
   <hs-shimmer-submenu></hs-shimmer-submenu>
+  <hs-shimmer-stream-list></hs-shimmer-stream-list>
   <hs-shimmer-stream-list></hs-shimmer-stream-list>
 </ng-template>
