--- a/web/src/app/pages/youtube-stream/youtube-stream.component.html
+++ b/web/src/app/pages/youtube-stream/youtube-stream.component.html
@@ -1,113 +1,37 @@
-<div class="submenu" *ngIf="!loading; else shimmerSubmenu">
-  <div class="spacer"></div>
-  <time class="updated-at" i18n="@@updatedAt" [attr.datetime]="updatedAt">
-    Updated at {{ updatedAt | date: "MM/dd HH:mm" }}
-  </time>
-</div>
+<ng-container *ngIf="!loading; else shimmer">
+  <div class="submenu">
+    <div class="spacer"></div>
+    <time class="updated-at" i18n="@@updatedAt" [attr.datetime]="updatedAt">
+      Updated at {{ updatedAt | date: "MM/dd HH:mm" }}
+    </time>
+  </div>
 
-<div class="stream-list-container" *ngIf="!loading; else shimmerList">
-  <ng-container *ngFor="let group of streamGroup">
-    <div class="date-label">{{ group.day | date: "MM/dd" }}</div>
+  <div class="stream-list-container">
+    <ng-container *ngFor="let group of streamGroup">
+      <div class="date-label">
+        {{ group.day | date: "MM/dd" }}
+      </div>
 
-    <div class="stream-list">
-      <div
-        class="stream"
-        *ngFor="let stream of group.streams; trackBy: trackBy"
-      >
-        <div class="thumbnail link" [routerLink]="['/stream', stream.streamId]">
-          <div class="cover-wrapper">
-            <img
-              class="cover"
-              src="https://img.youtube.com/vi/{{
-                stream.streamId
-              }}/maxresdefault.jpg"
-            />
-          </div>
-
-          <div class="duration">
-            <ng-container *ngIf="stream.endTime; else clock">
-              {{ stream.startTime | duration: stream.endTime }}
-            </ng-container>
-            <ng-template #clock>
-              {{ stream.startTime | duration: (everySecond$ | async) }}
-            </ng-template>
-          </div>
-
-          <a
-            class="icon"
-            href="https://youtu.be/{{ stream.streamId }}"
-            target="_blank"
-            (click)="$event.stopPropagation()"
-          >
-            <mat-icon svgIcon="open_in_new"></mat-icon>
-          </a>
-        </div>
-
+      <div class="stream-list">
         <div
-          class="title"
-          title="{{ stream.title }}"
-          ellipsis
-          [ellipsis-content]="stream.title"
-        ></div>
-
-        <div class="viewers" [ngClass]="{ current: !stream.endTime }">
-          <ng-container *ngIf="stream.endTime; else live">
-            <mat-icon
-              class="view-icon"
-              svgIcon="eye"
-              i18n-title="@@streamHasEnded"
-              title="Stream has ended"
-            ></mat-icon>
-          </ng-container>
-
-          <ng-template #live>
-            <mat-icon
-              class="view-icon"
-              svgIcon="eye"
-              i18n-title="@@streaming"
-              title="Streaming"
-            ></mat-icon>
-          </ng-template>
-          <span i18n-title="@@averageViewers" title="Average Viewers">
-            {{ (stream.averageViewerCount | number) || "----" }}
-          </span>
-          <span class="separator"> / </span>
-          <span i18n-title="@@maximumViewers" title="Maximum Viewers">
-            {{ (stream.maxViewerCount | number) || "----" }}
-          </span>
-        </div>
-
-        <div class="meta">
-          <img
-            class="profile"
-            src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
-          />
-          <span class="name">{{ stream.vtuberId | name }}</span>
-          <span class="dot">•</span>
-          <span
-            class="time"
-            title="{{ stream.startTime | date: 'yyyy/MM/dd HH:mm:ss' }}"
-          >
-            {{ stream.startTime | distance: (everyMinute$ | async) }}
-          </span>
+          class="stream"
+          *ngFor="let stream of group.streams; trackBy: trackBy"
+        >
+          <hs-stream-item [stream]="stream"></hs-stream-item>
         </div>
       </div>
-    </div>
-  </ng-container>
-</div>
+    </ng-container>
+  </div>
+</ng-container>
 
 <div class="stream-list-container">
-  <div [hidden]="loading || !showSpinner" class="spinner">
+  <div [hidden]="!showSpinner" class="spinner">
     <mat-spinner #spinner [diameter]="30"></mat-spinner>
   </div>
 </div>
 
-<ng-template #shimmerSubmenu>
+<ng-template #shimmer>
   <hs-shimmer-submenu></hs-shimmer-submenu>
-</ng-template>
-
-<ng-template #shimmerList>
   <hs-shimmer-stream-list></hs-shimmer-stream-list>
-
   <hs-shimmer-stream-list></hs-shimmer-stream-list>
 </ng-template>
