--- a/web/src/app/pages/streams-detail/streams-detail.component.html
+++ b/web/src/app/pages/streams-detail/streams-detail.component.html
@@ -75,7 +75,7 @@
   </div>
 
   <div class="chart-container">
-    <h4 class="chart-title">Stream Viewers</h4>
+    <h4 class="chart-title" i18n="@@streamViewers">Stream Viewers</h4>
 
     <ng-container *ngIf="loading; then shimmerChart; else streamChart">
     </ng-container>
