feat(web): store settings also in localStorage

--- a/web/src/app/layout/header/header.component.html
+++ b/web/src/app/layout/header/header.component.html
@@ -24,7 +24,7 @@
     mat-icon-button
     matTooltip="Toggle Dark Mode"
     i18n-matTooltip="@@toggleDarkMode"
-    (click)="config.toggleDarkMode()"
+    (click)="toggleDarkMode()"
   >
     <mat-icon svgIcon="theme"></mat-icon>
   </button>
