feat(web): support malay language (#367)
Thanks to @Admiy02. Closes #367.

--- a/web/src/app/layout/header/header.component.html
+++ b/web/src/app/layout/header/header.component.html
@@ -18,6 +18,7 @@
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="selectLanguage('en')">English</button>
+    <button mat-menu-item (click)="selectLanguage('ms')">Melayu</button>
     <button mat-menu-item (click)="selectLanguage('zh')">中文</button>
   </mat-menu>
   <button
