feat(web): update thumbnail url

--- a/web/src/app/pages/streams-detail/streams-detail.component.html
+++ b/web/src/app/pages/streams-detail/streams-detail.component.html
@@ -4,9 +4,7 @@
       <a class="cover-link">
         <img
           class="cover"
-          src="https://img.youtube.com/vi/{{
-            stream.streamId
-          }}/maxresdefault.jpg"
+          src="https://holo.poi.cat/thumbnail/{{ stream.streamId }}.jpg"
         />
       </a>
     </div>
