Revert "feat(web): update thumbnail url"
This reverts commit 7b470fe3ddf1ebe64477a4e345be6194f6b33ac4.

--- a/web/src/app/pages/streams-detail/streams-detail.component.html
+++ b/web/src/app/pages/streams-detail/streams-detail.component.html
@@ -4,7 +4,9 @@
       <a class="cover-link">
         <img
           class="cover"
-          src="https://holo.poi.cat/thumbnail/{{ stream.streamId }}.jpg"
+          src="https://img.youtube.com/vi/{{
+            stream.streamId
+          }}/maxresdefault.jpg"
         />
       </a>
     </div>
