--- a/web/src/app/shared/components/stream-item.component.html
+++ b/web/src/app/shared/components/stream-item.component.html
@@ -2,7 +2,7 @@
   <div class="cover-wrapper">
     <img
       class="cover"
-      src="https://holo.poi.cat/thumbnail/{{ stream.streamId }}.jpg"
+      src="https://img.youtube.com/vi/{{ stream.streamId }}/maxresdefault.jpg"
     />
   </div>
 
