feat(web): bypass server workers when fetching thumbnail

--- a/web/src/app/pages/streams-detail/streams-detail.component.html
+++ b/web/src/app/pages/streams-detail/streams-detail.component.html
@@ -4,7 +4,9 @@
       <a class="cover-link">
         <img
           class="cover"
-          src="https://holo.poi.cat/thumbnail/{{ stream.streamId }}.jpg"
+          src="https://holo.poi.cat/thumbnail/{{
+            stream.streamId
+          }}.jpg?ngsw-bypass"
         />
       </a>
     </div>
