--- a/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
+++ b/web/src/app/pages/youtube-schedule-stream/youtube-schedule-stream.html
@@ -39,7 +39,7 @@
   </ng-template>
 
   <hs-loading-spinner
-    [hidden]="list.loading && list.refresh"
+    [hidden]="(list.loading && list.refresh) || list.reachedEnd"
     (reach)="
       list.loading ? null : loadMore$.next({ refresh: false, last: list.streams[list.streams.length - 1] })
     "
