--- a/web/src/app/components/stream-list/stream-list.scss
+++ b/web/src/app/components/stream-list/stream-list.scss
@@ -33,7 +33,7 @@
       padding-bottom: 56.25%;
     }
 
-    .cover-wrapper {
+    .cover {
       position: absolute;
       top: 0;
       right: 0;
@@ -42,7 +42,7 @@
       display: block;
     }
 
-    .cover {
+    .img {
       display: block;
       width: 100%;
       height: 100%;
