fix(web): correct and simplify styling of components

--- a/web/src/app/components/stream-item/stream-item.html
+++ b/web/src/app/components/stream-item/stream-item.html
@@ -3,9 +3,9 @@
   [ngClass]="{ link: stream.status !== 'scheduled' }"
   [routerLink]="stream.status === 'scheduled' ? null : ['/stream', stream.streamId]"
 >
-  <div class="cover-wrapper">
+  <div class="cover">
     <img
-      class="cover"
+      class="img"
       src="https://holo.poi.cat/thumbnail/{{ stream.streamId }}.jpg?ngsw-bypass"
     />
   </div>
