--- a/web/src/app/pages/streams-detail/streams-detail.component.html
+++ b/web/src/app/pages/streams-detail/streams-detail.component.html
@@ -1,9 +1,8 @@
-<div class="streams-pages">
+<div class="streams-pages" [ngClass]="{ shimmering: loading }">
   <div class="hero">
     <div class="cover-wrapper">
-      <a class="cover-link">
-        <img class="cover" src="{{ stream?.thumbnailUrl }}?ngsw-bypass" />
-      </a>
+      <ng-container *ngIf="loading; then shimmerCover; else streamCover">
+      </ng-container>
     </div>
 
     <div class="meta">
@@ -12,13 +11,8 @@
         </ng-container>
       </div>
 
-      <a class="liver" [routerLink]="['/vtuber', stream?.vtuberId]">
-        <img
-          class="profile"
-          src="/assets/thumbnail/{{ stream?.vtuberId }}.jpg"
-        />
-        <span class="name">{{ stream?.vtuberId | name }}</span>
-      </a>
+      <ng-container *ngIf="loading; then shimmerLiver; else streamLiver">
+      </ng-container>
 
       <div class="statistic-container">
         <div class="statistic">
@@ -77,6 +71,23 @@
   </div>
 </div>
 
+<!-- cover -->
+<ng-template #streamCover>
+  <a class="cover-link">
+    <img class="cover" src="{{ stream?.thumbnailUrl }}?ngsw-bypass" />
+  </a>
+</ng-template>
+
+<ng-template #shimmerCover>
+  <div class="cover-link">
+    <svg class="cover" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+      <path 
+        d="M13.56 7.73c-.47.18-1 .7-1.18 1.19-.13.36-.13.43-.13 6.18v5.82l.23.3c.13.17.26.3.28.3.03 0 .7-1.4 1.5-3.1l2.66-5.67 1.2-2.55-.57-.81c-.45-.65-.6-.84-.8-.91a26.35 26.35 0 01-.89-.4c-1.15-.55-1.6-.62-2.3-.35m4.23 1.26c0 .07.47.75.52.75.04 0 .2-.35.2-.43 0-.03-.36-.21-.56-.29-.1-.03-.16-.05-.16-.03m.94.81c-.1.18-.2.31-.23.3-.04-.03-.06-.01-.06.02s.03.07.08.08a74 74 0 013.15 4.5c.28.42.54.76.57.75.08-.03 1.92-3.36 1.93-3.48 0-.05-.13-.14-.28-.2a44.22 44.22 0 01-.93-.44 52.06 52.06 0 00-1.14-.52 54.21 54.21 0 01-1.14-.52 59.17 59.17 0 00-1.57-.72l-.22-.1-.16.33M17.7 12l-2.2 4.7a5935.1 5935.1 0 00-2 4.27c-.4.83-.42.92-.34 1.06.16.26 3.25 4 3.3 4 .04 0 .44-.7.91-1.56 1.82-3.33 4.37-8 4.5-8.28l.15-.28-.19-.27a629.54 629.54 0 01-1.8-2.63 59.01 59.01 0 00-1.66-2.36c-.03 0-.33.6-.67 1.35m5.84 1.97a23.76 23.76 0 01-1.08 1.89c-.03 0-.06.03-.06.07 0 .03.03.05.06.04.06-.01.51.63 3.93 5.62a465.95 465.95 0 001.94 2.82l.18.25 1.6-2.95 1.6-2.94v-1.35c0-2.16.07-2.09-3.15-3.51a59.04 59.04 0 01-1.37-.63l-2.6-1.2c-.02 0-.49.85-1.05 1.9m-1.42 2.61c-.15.26-1.07 1.94-4.16 7.64a38.92 38.92 0 01-1.25 2.2c-.06.03-.06.05 0 .05.05 0 .67.72 1.4 1.61a116.79 116.79 0 001.48 1.79l.16.17.72-.36a236.5 236.5 0 012.8-1.36 431.79 431.79 0 003.24-1.55l1.14-.56.31-.56c.17-.3.34-.55.37-.55.03 0 .06-.03.06-.07 0-.04-.02-.05-.06-.03-.03.02-.55-.7-1.16-1.58l-2.82-4.12a456.11 456.11 0 00-1.9-2.75l-.17-.25-.16.28m8.1 5.74L28.79 25l.12.23c.17.32.17.32 1.17-.15.98-.47 1.25-.68 1.5-1.16l.16-.3-.02-1.99-.02-1.98-1.46 2.68m-17.98-.22v.56l.16-.3c.2-.36.2-.38 0-.61l-.16-.2v.55m.5.47l-.3.66-.2.43v3.5c0 4.06-.01 3.97.55 4.57.44.47.26.69 1.83-2.2a277.22 277.22 0 011.5-2.75c.12-.2.2-.38.16-.38-.03 0-.8-.9-1.7-2-1.83-2.24-1.72-2.12-1.84-1.83m15.7 3.04a1.29 1.29 0 00-.11.23c0 .03.29-.07.38-.13.01 0-.02-.08-.08-.16l-.1-.14-.1.2M16 27.83a672.23 672.23 0 01-1.45 2.67c-1.05 1.93-1.01 1.82-.7 1.88.65.12 1.03.02 2.37-.63a223 223 0 013.08-1.5c.05-.03-2.66-3.38-2.74-3.38-.03 0-.28.43-.56.96"
+      />
+    </svg>
+  </div>
+</ng-template>
+
 <!-- title -->
 <ng-template #streamTitle>
   <a class="title" href="https://youtu.be/{{ stream.streamId }}">
@@ -98,7 +109,13 @@
 
 <ng-template #shimmerLiver>
   <div class="liver">
-    <span class="profile shimmer"></span>
+    <span class="profile shimmer">
+      <svg class="cover" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+        <path 
+          d="M13.56 7.73c-.47.18-1 .7-1.18 1.19-.13.36-.13.43-.13 6.18v5.82l.23.3c.13.17.26.3.28.3.03 0 .7-1.4 1.5-3.1l2.66-5.67 1.2-2.55-.57-.81c-.45-.65-.6-.84-.8-.91a26.35 26.35 0 01-.89-.4c-1.15-.55-1.6-.62-2.3-.35m4.23 1.26c0 .07.47.75.52.75.04 0 .2-.35.2-.43 0-.03-.36-.21-.56-.29-.1-.03-.16-.05-.16-.03m.94.81c-.1.18-.2.31-.23.3-.04-.03-.06-.01-.06.02s.03.07.08.08a74 74 0 013.15 4.5c.28.42.54.76.57.75.08-.03 1.92-3.36 1.93-3.48 0-.05-.13-.14-.28-.2a44.22 44.22 0 01-.93-.44 52.06 52.06 0 00-1.14-.52 54.21 54.21 0 01-1.14-.52 59.17 59.17 0 00-1.57-.72l-.22-.1-.16.33M17.7 12l-2.2 4.7a5935.1 5935.1 0 00-2 4.27c-.4.83-.42.92-.34 1.06.16.26 3.25 4 3.3 4 .04 0 .44-.7.91-1.56 1.82-3.33 4.37-8 4.5-8.28l.15-.28-.19-.27a629.54 629.54 0 01-1.8-2.63 59.01 59.01 0 00-1.66-2.36c-.03 0-.33.6-.67 1.35m5.84 1.97a23.76 23.76 0 01-1.08 1.89c-.03 0-.06.03-.06.07 0 .03.03.05.06.04.06-.01.51.63 3.93 5.62a465.95 465.95 0 001.94 2.82l.18.25 1.6-2.95 1.6-2.94v-1.35c0-2.16.07-2.09-3.15-3.51a59.04 59.04 0 01-1.37-.63l-2.6-1.2c-.02 0-.49.85-1.05 1.9m-1.42 2.61c-.15.26-1.07 1.94-4.16 7.64a38.92 38.92 0 01-1.25 2.2c-.06.03-.06.05 0 .05.05 0 .67.72 1.4 1.61a116.79 116.79 0 001.48 1.79l.16.17.72-.36a236.5 236.5 0 012.8-1.36 431.79 431.79 0 003.24-1.55l1.14-.56.31-.56c.17-.3.34-.55.37-.55.03 0 .06-.03.06-.07 0-.04-.02-.05-.06-.03-.03.02-.55-.7-1.16-1.58l-2.82-4.12a456.11 456.11 0 00-1.9-2.75l-.17-.25-.16.28m8.1 5.74L28.79 25l.12.23c.17.32.17.32 1.17-.15.98-.47 1.25-.68 1.5-1.16l.16-.3-.02-1.99-.02-1.98-1.46 2.68m-17.98-.22v.56l.16-.3c.2-.36.2-.38 0-.61l-.16-.2v.55m.5.47l-.3.66-.2.43v3.5c0 4.06-.01 3.97.55 4.57.44.47.26.69 1.83-2.2a277.22 277.22 0 011.5-2.75c.12-.2.2-.38.16-.38-.03 0-.8-.9-1.7-2-1.83-2.24-1.72-2.12-1.84-1.83m15.7 3.04a1.29 1.29 0 00-.11.23c0 .03.29-.07.38-.13.01 0-.02-.08-.08-.16l-.1-.14-.1.2M16 27.83a672.23 672.23 0 01-1.45 2.67c-1.05 1.93-1.01 1.82-.7 1.88.65.12 1.03.02 2.37-.63a223 223 0 013.08-1.5c.05-.03-2.66-3.38-2.74-3.38-.03 0-.28.43-.56.96"
+        />
+      </svg>
+    </span>
     <span class="name shimmer text"> </span>
   </div>
 </ng-template>
