feat(web): switch to apexcharts

--- a/web/src/app/pages/vtubers-detail/vtubers-detail.html
+++ b/web/src/app/pages/vtubers-detail/vtubers-detail.html
@@ -1,71 +1,5 @@
 <div class="mx-auto max-w-960">
-  <hs-vtuber-summary
-    [vtuber]="vtuber"
-    [channels]="channels"
-    [loading]="chartLoading"
-  ></hs-vtuber-summary>
-
-  <div class="chart-container">
-    <div class="chart" *ngIf="hasYouTubeChannel">
-      <hs-sub-menu>
-        <hs-sub-menu-title i18n="@@youtubeSubscribers">
-          YouTube Subscribers
-        </hs-sub-menu-title>
-      </hs-sub-menu>
-
-      <hs-area-chart
-        [loading]="chartLoading"
-        [results]="youtubeSubs"
-        schemeKey="youtube"
-        timeUnit="day"
-      ></hs-area-chart>
-    </div>
-
-    <div class="chart" *ngIf="hasBilibiliChannel">
-      <hs-sub-menu>
-        <hs-sub-menu-title i18n="@@bilibiliSubscribers">
-          Bilibili Subscribers
-        </hs-sub-menu-title>
-      </hs-sub-menu>
-
-      <hs-area-chart
-        [loading]="chartLoading"
-        [results]="bilibiliSubs"
-        schemeKey="bilibili"
-        timeUnit="day"
-      ></hs-area-chart>
-    </div>
-
-    <div class="chart" *ngIf="hasYouTubeChannel">
-      <hs-sub-menu>
-        <hs-sub-menu-title i18n="@@youtubeViews">
-          YouTube Views
-        </hs-sub-menu-title>
-      </hs-sub-menu>
-
-      <hs-area-chart
-        [loading]="chartLoading"
-        [results]="youtubeViews"
-        schemeKey="youtube"
-        timeUnit="day"
-      ></hs-area-chart>
-    </div>
-
-    <div class="chart" *ngIf="hasBilibiliChannel">
-      <hs-sub-menu>
-        <hs-sub-menu-title i18n="@@bilibiliViews">
-          Bilibili Views
-        </hs-sub-menu-title>
-      </hs-sub-menu>
-
-      <hs-area-chart
-        [loading]="chartLoading"
-        [results]="bilibiliViews"
-        schemeKey="bilibili"
-        timeUnit="day"
-      ></hs-area-chart>
-    </div>
-  </div>
+  <hs-channel-stats [vtuber]="vtuber"> </hs-channel-stats>
 
   <ng-container *ngIf="hasYouTubeChannel">
     <div *ngIf="data$ | async as list">
