--- a/web/src/app/components/apx-chart/_apx-chart-theme.scss
+++ b/web/src/app/components/apx-chart/_apx-chart-theme.scss
@@ -1,41 +1,32 @@
 @import "~@angular/material/theming";
 
-@mixin area-chart-theme($theme) {
+@mixin apx-chart-theme($theme) {
   $background: map-get($theme, "background");
   $foreground: map-get($theme, "foreground");
 
-  .area-chart {
-    .tick {
-      fill: mat-color($foreground, "secondary-text");
-    }
-
-    .tooltip-anchor {
-      fill: mat-color($foreground, "secondary-text");
-    }
-
-    .gridline-path {
+  .apx-chart {
+    .apexcharts-xaxis > line,
+    .apexcharts-gridline,
+    .apexcharts-xcrosshairs {
       stroke: mat-color($foreground, "divider");
     }
 
-    .x.axis {
+    .apexcharts-text,
+    .apexcharts-title-text {
       fill: mat-color($foreground, "text");
     }
   }
 }
 
-@mixin area-chart-typography($config) {
-  .area-chart {
-    .tooltip-caption {
+@mixin apx-chart-typography($config) {
+  .apx-chart {
+    .apexcharts-tooltip {
       font-size: mat-font-size($config, "caption");
       font-weight: mat-font-weight($config, "body-2");
     }
 
-    .tick {
-      font-size: mat-font-size($config, "caption");
-      font-weight: mat-font-weight($config, "body-2");
-    }
-
-    .x.axis {
+    .apexcharts-xaxis-label,
+    .apexcharts-yaxis-label {
       font-size: mat-font-size($config, "body-1");
       font-weight: mat-font-weight($config, "body-2");
     }
