--- a/web/src/app/pages/streams-detail/streams-detail.html
+++ b/web/src/app/pages/streams-detail/streams-detail.html
@@ -1,19 +1,7 @@
 <div class="mx-auto max-w-960">
   <hs-stream-summary [stream]="stream" [loading]="loading"></hs-stream-summary>
 
-  <div class="chart">
-    <hs-sub-menu>
-      <hs-sub-menu-title i18n="@@streamViewers">
-        Stream Viewers
-      </hs-sub-menu-title>
-    </hs-sub-menu>
-
-    <hs-area-chart
-      [loading]="loading"
-      [results]="stats"
-      [timeline]="true"
-      schemeKey="youtube"
-      timeUnit="second"
-    ></hs-area-chart>
+  <div class="chart" *ngFor="let report of reports">
+    <hs-stream-stats-chart [report]="report"> </hs-stream-stats-chart>
   </div>
 </div>
