--- a/web/src/styles/theme.scss
+++ b/web/src/styles/theme.scss
@@ -5,13 +5,14 @@
 @import "src/app/layout/sidenav/sidenav-theme";
 
 // components
+@import "src/app/components/apx-chart/apx-chart-theme";
 @import "src/app/components/vtuber-summary/vtuber-summary-theme";
 @import "src/app/components/big-number/big-number-theme";
 @import "src/app/components/stream-summary/stream-summary-theme";
 @import "src/app/components/stream-item/stream-item-theme";
-@import "src/app/components/area-chart/area-chart-theme";
 @import "src/app/components/channel-table/channel-table-theme";
 @import "src/app/components/sub-menu/sub-menu-theme";
+@import "src/app/components/channel-stats-chart/channel-stats-chart-theme";
 
 // pages
 @import "src/app/pages/not-found/not-found-theme";
@@ -28,13 +29,14 @@
   @include stream-item-theme($theme);
   @include vtuber-summary-theme($theme);
   @include stream-summary-theme($theme);
-  @include area-chart-theme($theme);
   @include channel-table-theme($theme);
   @include sub-menu-theme($theme);
   @include sidenav-theme($theme);
   @include header-theme($theme);
   @include not-found-theme($theme);
   @include big-number-theme($theme);
+  @include channel-stats-chart-theme($theme);
+  @include apx-chart-theme($theme);
 }
 
 @mixin hs-typography($config) {
@@ -43,11 +45,12 @@
   @include stream-item-typography($config);
   @include vtuber-summary-typography($config);
   @include stream-summary-typography($config);
-  @include area-chart-typography($config);
   @include sub-menu-typography($config);
   @include sidenav-typography($config);
   @include settings-typography($config);
   @include big-number-typography($config);
+  @include channel-stats-chart-typography($config);
+  @include apx-chart-typography($config);
 }
 
 @include hs-typography($hs-typography-config);
